tests/snapshots/sfc/ts/patches__es6_shorthand_in_computed_style.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeStyle as _normalizeStyle } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const width = ref(100)
const height = ref(50)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", {
      style: _normalizeStyle({ width: width.value, height: height.value })
    }, "Styled", 4 /* STYLE */))
}
}

})
