tests/snapshots/sfc/ts/patches__es6_shorthand_in_event_handler_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const foo = ref('value')
const bar = ref(123)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", {
      onClick: _cache[0] || (_cache[0] = ($event: any) => (_ctx.handleEvent({ foo: foo.value, bar: bar.value })))
    }, "Test"))
}
}

})
