tests/snapshots/sfc/ts/patches__es6_shorthand_mixed_with_regular_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock, resolveComponent as _resolveComponent } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const name = ref('test')

return (_ctx: any,_cache: any) => {
  const _component_Component = _resolveComponent("Component")

  return (_openBlock(), _createBlock(_component_Component, { options: { name: name.value, extra: 'value' } }, null, 8 /* PROPS */, ["options"]))
}
}

})
